Fixed bug #37707 clone without assigning leaks memory

# Based on a patch by Nuno